attribute stock alignment fix, tour step:8 writing changed

--- a/src/components/Sidebar/ProductsSidebar.css
+++ b/src/components/Sidebar/ProductsSidebar.css
@@ -80,6 +80,7 @@
 .ProductsSidebar-add-attributes--table tr td._18bqN:last-of-type, .gfcPv:last-of-type {
   padding-right: 12px;
   text-align: center;
+  vertical-align: bottom;
 }
 
 .ProductsSidebar-add--products,
